# sdssdb

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pylintrc  .rstcheck.cfg  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  README.rst  STYLE.rst  codecov.yml  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: build.yml  check_lock.yml  lint.yml  pythonapp.yml  release.yml  test.yml
docs/sphinx/: api.rst  changelog.md  conf.py  contributing.rst  example.rst  index.rst  installation.rst  intro.rst  objects.inv  peewee.rst  requirements.txt
docs/sphinx/_static/: custom.css
etc/: sdssdb.module
host/: operations-as5db.sql  operations-test.sql
python/sdssdb/: __init__.py  connection.py  dbconfig.ini  exceptions.py  main.py
python/sdssdb/core/: exceptions.py
python/sdssdb/etc/: sdssdb.yml
python/sdssdb/misc/: logger.py
python/sdssdb/peewee/: __init__.py  connection.py  targetdb.py
python/sdssdb/peewee/lvmdb/: __init__.py  drp.py  gortdb.py  lvmopsdb.py
python/sdssdb/peewee/observatory/: __init__.py  mangadb.py  platedb.py
python/sdssdb/peewee/operationsdb/: __init__.py  apogeeqldb.py  mangadb.py  platedb.py
python/sdssdb/peewee/sdss5db/: __init__.py  apogee_drpdb.py  astradb.py  boss_drp.py  catalogdb.py  deprecated.py  lvmopsdb.py  opsdb.py  sandbox.py  targetdb.py  vizdb.py
python/sdssdb/sqlalchemy/: DatabaseConnection.py  Database_Connections_adv.py  __init__.py  catalogdb.py  database.py  database_connections.py  dbconfig.ini  pgpass.py
python/sdssdb/sqlalchemy/archive/: __init__.py  sas.py
python/sdssdb/sqlalchemy/lvmdb/: __init__.py  drp.py
python/sdssdb/sqlalchemy/mangadb/: __init__.py  auxdb.py  dapdb.py  datadb.py  sampledb.py
python/sdssdb/sqlalchemy/operationsdb/: __init__.py  apogeeqldb.py  mangadb.py  platedb.py
python/sdssdb/sqlalchemy/sdss5db/: __init__.py  apogee_drpdb.py  astradb.py  boss_drp.py  catalogdb.py  opsdb.py  targetdb.py  vizdb.py
python/sdssdb/sqlalchemy/sql/: targetdb.graffle  targetdb.sql
python/sdssdb/tests/: conftest.py  test_connection.py  test_main.py  test_peewee.py  test_sqlalchemy.py
python/sdssdb/tests/pwdbs/: __init__.py  conftest.py  factories.py  factoryboy.py  models.py  test_connection.py  test_factory.py  test_sdss5db.py
python/sdssdb/tests/sqladbs/: conftest.py  factories.py  models.py  test_archivedb.py  test_connection.py  test_factory.py  test_mangadb.py  test_sdss5db.py
python/sdssdb/utils/: __init__.py  adaptors.py  database.py  ingest.py  internals.py  maintenance.py  registry.py  schemadisplay.py
schema/catalogdb/: allwiseCSV2DB  catalogdb.sql  eRosita2csv  eRosita_mock.sql  eRosita_mock_CSV2DB  foreignKeys.sql  gaia_dr1.sql  gaia_dr2_index.sql  gaia_dr2_wd_candidates_v1.sql  gaia_source2csv  gaia_sourceCSV2DB  gaia_tgasCSV2DB  gaia_wdCSV2DB  gaiadr2_tmass_best_neighbour.sql  guvcat.sql  guvcat_CSV2DB  kepler.sql  kic2DB  kic_10_index.sql  photoobj2csv  photoobj_CSV2DB  pks.sql  prepWISE.py  sdss_dr14_apogeeStar.sql  sdss_dr14_apogeeStarVisit.sql  sdss_dr14_apogeeVisit.sql  sdss_dr14_ascapStar.sql  sdss_dr14_cannonStar.sql  sdss_dr14_specObj.sql  tess_inputCSV2DB  tic_v6_index.sql  twoMass2DB  two_mass_index.sql  tycho2.sql
schema/catalogdb/allwise/source/: allwise.sql  allwise_index.sql  allwise_load  readme.rst
schema/catalogdb/eRosita/mock/: eRosita_mock_load  prepERosita
schema/catalogdb/functions/: gaiaClean.sql  galacticGenesis.sql  galacticGenesis_big.sql  twoMassClean.sql  twomassBrightNeighbor.sql  twomassnear.sql
schema/catalogdb/gaia/dr2/: gaia_dr2_source_index.sql  readme.rst
schema/catalogdb/kic/v10/: kepler_input_10_index.sql  kepler_input_10_load
schema/catalogdb/sdssApogeeVisit/dr14/: sdss_dr14_apogeeVisit.sql
schema/catalogdb/sdssAscapStar/dr14/: sdss_dr14_ascapStar.sql
schema/catalogdb/tic/v6/: tic_v6.sql  tic_v6_index.sql
schema/catalogdb/twomass/psc/: twomass_psc_index.sql  twomass_psc_load
schema/catalogdb/unused/: gaiadr2_sdssdr9_best_neighbour.sql  guvcat.sql
schema/catalogdb/wd/v1/: gaia_dr2_wd_candidates_v1.sql
schema/lvmdb/: gortdb.sql  lvmopsdb.sql
schema/operationsdb/: mangadb.sql  platedb.sql
schema/sdss5db/: update_graphs.py
schema/sdss5db/apogee_drp/allstar/: apogee_drp_allstar.sql
schema/sdss5db/apogee_drp/allvisit/: apogee_drp_allvisit.sql
schema/sdss5db/apogee_drp/ap2d/: apogee_drp_ap2d.sql  apogee_drp_ap2d_indexes.sql
schema/sdss5db/apogee_drp/apred_status/: apogee_drp_apred.sql  apogee_drp_apred_status.sql  apogee_drp_apred_status_indexes.sql
schema/sdss5db/apogee_drp/calib_status/: apogee_drp_calib_status.sql  apogee_drp_calib_status_indexes.sql
schema/sdss5db/apogee_drp/daily_status/: apogee_drp_daily_status.sql  apogee_drp_daily_status_indexes.sql
schema/sdss5db/apogee_drp/exposure/: apogee_drp_exposure.sql  apogee_drp_exposure_indexes.sql  exposure.sql
schema/sdss5db/apogee_drp/exposure_status/: apogee_drp_ap3d.sql  apogee_drp_ap3d_indexes.sql  (+2 more)
schema/sdss5db/boss_drp/: boss_drp.sql
schema/sdss5db/catalogdb/: catalog.sql  catalogdb.sql  foreignKeys.sql
schema/sdss5db/metadata/: boss_drp.json  catalogdb.json  catalogdb.py  catalogdb_metadata.json  catalogdb_metadata.py  load_metadata.py  targetdb.json  targetdb.yaml  vizdb.json
schema/sdss5db/opsdb/: opsdb.sql
schema/sdss5db/subsetdb/: README
schema/sdss5db/targetdb/: cadence_fits2csv.py  cadence_load.sql  targetdb.graffle  targetdb.sql
schema/sdss5db/vizdb/: eboss_plates.schema.sql  gen_versions.py  sdss_id_to_astra_pipeline.py  vizdb.sql
tests/: __init__.py  conftest.py  helpers.py  test_connection.py  test_utils.py
tests/data/: models.yml
tests/pwdbs/: __init__.py  conftest.py  factories.py  factoryboy.py  models.py  test_astra.py  test_connection.py  test_factory.py  test_imports.py  test_sdss5db.py
tests/sqladbs/: __init__.py  conftest.py  factories.py  models.py  test_archivedb.py  test_connection.py  test_factory.py  test_imports.py  test_mangadb.py  test_sdss5db.py
(+919 files in other folders)
