[project]
name = "sdssdb"
version = "1.0.1a1"
authors = [
    {name = "José Sánchez-Gallego", email = "gallegoj@uw.edu"},
    {name = "Brian Cherinka", email = "bcherinka@stsci.edu"}
]
description = "SDSS product for database management"
keywords = ["astronomy", "software", "database"]
license = {text = "BSD 3-Clause License", file = "LICENSE.md"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "pgpasslib>=1.1.0",
    "psycopg2-binary>=2.9.11",
    "peewee>=3.17.6",
    "sqlalchemy>=2.0.0",
    "sdsstools>=1.9.7",
    "numpy>=1.18.2",
    "six>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/sdss/sdssdb"
Repository = "https://github.com/sdss/sdssdb"
Documentation = "https://sdssdb.readthedocs.org"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
extras = [
    "progressbar2>=3.46.1",
    "pydot>=1.4.1",
    "astropy>=5.0.0",
    "pandas>=2.0.0",
    "inflect>=4.1.0",
    "h5py>=3.8.0",
    "psycopg[binary]>=3.2.13",
]

[dependency-groups]
extras = [
    "progressbar2>=3.46.1",
    "pydot>=1.4.1",
    "astropy>=5.0.0",
    "pandas>=2.0.0",
    "inflect>=4.1.0",
    "h5py>=3.8.0",
    "psycopg[binary]>=3.2.13",
]
dev = [
    "pytest>=5.2",
    "pytest-cov>=2.4.0",
    "pytest-sugar>=0.8.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.2",
    "pytest-postgresql>=2.2.1,<6",
    "factory_boy>=2.12.0",
    "pytest-factoryboy>=2.0.3",
    "pyyaml>=5.1",
    "ruff>=0.14.8",
    "ty>=0.0.14",
]
docs = [
    "Sphinx>=7.0.0",
    "furo>=2021.9.22",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "sphinx-autodoc-typehints>=1.23.2",
    "doc8>=0.8.0",
    "rstcheck>=3.3.1"
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.ruff]
line-length = 99
target-version = 'py312'
exclude = ["typings/"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E741"]
exclude = [
    "python/sdssdb/sqlalchemy/operationsdb/**/*.py",
    "python/sdssdb/sqlalchemy/archive/*.py",
    "python/sdssdb/sqlalchemy/mangadb/*.py"
]

[tool.ruff.lint.isort]
known-first-party = ["sdssdb"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sqla", "peewee", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools"]
sqla = ["sqlalchemy"]
peewee = ["peewee", "playhouse"]

[tool.pytest.ini_options]
addopts = "--cov sdssdb --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["python/sdssdb/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sdssdb"
module-root = "python"
