[metadata]
name = sdssdb
version = 0.3.0dev
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = SDSS product for database management
url = https://github.com/sdss/sdssdb
project_urls =
    Repository = https://github.com/sdss/sdssdb
    Documentation = https://sdssdb.readthedocs.org
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, software, database
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
    = python
install_requires =
    pyyaml>=5.1
    pygments
    pgpasslib>=1.1.0
    psycopg2-binary>=2.7.7
    six>=1.12.0

[options.packages.find]
where =
    python
exclude =
    *.tests

[options.package_data]
sdssdb =
    etc/*

[options.extras_require]
dev =
    pytest>=3.0.7
    pytest-cov>=2.4.0
    pytest-sugar>=0.8.0
    pydot>=1.4.1
    sqlalchemy>=1.3.6
    peewee>=3.9.6

docs =
    Sphinx>=1.8.0
    sphinx_bootstrap_theme>=0.4.12
    releases>=1.6.1
    semantic-version==2.6.0


[isort]
line_length = 99
lines_after_imports = 2
use_parentheses = true
balanced_wrapping = true


[flake8]
ignore =
    # H101: Use TODO(NAME)
    H101
    E722
    W504
    W505
max-line-length = 99


[bumpversion]
current_version = 0.3.0dev
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
serialize =
	{major}.{minor}.{patch}{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = alpha
values =
	dev
	alpha

[bumpversion:file:python/sdssdb/__init__.py]
[bumpversion:file:setup.cfg]
[bumpversion:file:docs/sphinx/installation.rst]

[coverage:run]
branch = true
