[metadata]
name = sdssdb
version = 0.3.3b3
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = SDSS product for database management
url = https://github.com/sdss/sdssdb
project_urls =
	Repository = https://github.com/sdss/sdssdb
	Documentation = https://sdssdb.readthedocs.org
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, software, database
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
	= python
install_requires =
	pyyaml>=5.1
	pygments
	pgpasslib>=1.1.0
	psycopg2-binary>=2.7.7
	six>=1.12.0
	peewee>=3.9.6
	sqlalchemy>=1.3.6
	sdsstools>=0.1.5
	numpy>=1.18.2

[options.packages.find]
where =
	python
exclude =
	*.tests

[options.package_data]
sdssdb =
	etc/*

[options.extras_require]
all =
	progressbar2>=3.46.1
	pydot>=1.4.1
	astropy>=4.0.0
	pandas>=1.0.0
dev =
	pytest>=3.0.7
	pytest-cov>=2.4.0
	pytest-sugar>=0.8.0
	sdsstools[dev]>=0.1.5
	ipython>=7.13.0
	ipdb>=0.13.2
docs =
	Sphinx>=1.8.0
	sphinx_bootstrap_theme>=0.4.12

[isort]
line_length = 79
lines_after_imports = 2
use_parentheses = true
balanced_wrapping = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
	E116
	E114
max-line-length = 99

[coverage:run]
branch = true
